fix(sidenav): removed user from story to align with spec

--- a/src/components/SideNav/_side-nav.scss
+++ b/src/components/SideNav/_side-nav.scss
@@ -17,24 +17,6 @@
     transform: translateX(0);
   }
 
-  &:not(.bx--side-nav--expanded) {
-    .bx--side-nav__item--active .bx--side-nav__submenu[aria-expanded='true']::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      width: 4px;
-      background-color: #0062ff;
-    }
-
-    .bx--side-nav__link[aria-current='page'],
-    .bx--side-nav__link--current,
-    .bx--side-nav__link--current:before {
-      background: $ui-05;
-    }
-  }
-
   &__icon > svg {
     fill: $ui-01;
   }
@@ -74,6 +56,28 @@
   .bx--side-nav__link--current {
     background-color: $gray-70;
     color: $ui-02;
+  }
+
+  &:not(.bx--side-nav--expanded) {
+    .bx--side-nav__item--active .bx--side-nav__submenu[aria-expanded='true'] {
+      position: relative;
+    }
+
+    .bx--side-nav__item--active .bx--side-nav__submenu[aria-expanded='true']::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      width: 4px;
+      background-color: $interactive-01;
+    }
+
+    .bx--side-nav__link[aria-current='page'],
+    .bx--side-nav__link--current,
+    .bx--side-nav__link--current:before {
+      background: $ui-05;
+    }
   }
 
   .bx--side-nav__menu {
